# sluice

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/: make_charts.py  make_icon.py
docs/: ARCHITECTURE.md  COMPARISON.md
examples/: bitcompare_v2lite.py  run_dsv4_ep4.py
src/sluice/: __init__.py  offloader.py  plugin.py
